tests/parse-errors/elseOutsideIf.rock
if True
say "hello"
(end if)
else
say "world"
